--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Painting Gallary </title>
   </head>
   <body>
     <noscript>
